# ChangeLog for xfce-base/xfce4-session
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.94 2009/07/27 17:46:53 nixnut Exp $

  27 Jul 2009; nixnut <nixnut@gentoo.org> xfce4-session-4.6.1.ebuild:
  ppc stable #265587

  30 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  xfce4-session-4.6.1.ebuild:
  Stable on alpha, bug #265587

  28 Jun 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking xfce4-session-4.6.1 ppc64 stable for bug 265587

  22 Jun 2009; Raúl Porcel <armin76@gentoo.org> xfce4-session-4.6.1.ebuild:
  arm/ia64 stable wrt #265587

  15 Jun 2009; Jeroen Roovers <jer@gentoo.org> xfce4-session-4.6.1.ebuild:
  Stable for HPPA (bug #265587).

  13 Jun 2009; Tiago Cunha <tcunha@gentoo.org> xfce4-session-4.6.1.ebuild:
  stable sparc, bug 265587

  10 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  xfce4-session-4.6.1.ebuild:
  stable x86, bug 265587

  09 Jun 2009; Jeremy Olexa <darkside@gentoo.org>
  xfce4-session-4.6.1.ebuild:
  amd64 stable, bug 265587

  01 May 2009; Jeremy Olexa <darkside@gentoo.org>
  xfce4-session-4.4.3.ebuild:
  Move use_enable out of global scope

  28 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  xfce4-session-4.6.1.ebuild:
  Move use_enable out of global scope into pkg_setup()

*xfce4-session-4.6.1 (21 Apr 2009)

  21 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  -xfce4-session-4.6.0.ebuild, +xfce4-session-4.6.1.ebuild:
  Version bump for xfce-4.6.1 release, remove old

*xfce4-session-4.6.0 (10 Mar 2009)

  10 Mar 2009; Christoph Mende <angelos@gentoo.org>
  +xfce4-session-4.6.0.ebuild:
  Xfce-4.6 bump

  22 Dec 2008; Christoph Mende <angelos@gentoo.org>
  -xfce4-session-4.4.2.ebuild:
  Removed old

  15 Dec 2008; Jeroen Roovers <jer@gentoo.org> xfce4-session-4.4.3.ebuild:
  Stable for HPPA (bug #249942).

  13 Dec 2008; Raúl Porcel <armin76@gentoo.org> xfce4-session-4.4.3.ebuild:
  alpha/arm/ia64/sparc/x86 stable wrt #249942