@@ -1,6 +1,6 @@
 DIST xfce4-session-4.4.3.tar.bz2 1276089 RMD160 e0aa16b9089ae00a34f5e1df5b1b9af7a104f922 SHA1 609cf888548e1dc7f2b2318698ab86ac73fb0f4d SHA256 fa23d0e079ea3bf1b7f0e056adc6e28df04581632207face4f851269d92bffdd
 DIST xfce4-session-4.6.1.tar.bz2 1365247 RMD160 0cab4a0ca2b0d7718cde546d98bac1c87a7ba4f0 SHA1 760e05bf73783521b3ce34e91aa187c74018ab8c SHA256 feed3f9053b83233697223a20f95ca0ad6efe9fedffcc098e4935a425e8f9f0e
 EBUILD xfce4-session-4.4.3.ebuild 1038 RMD160 5e4a0da26a906c64ad4651c996804abcf2923265 SHA1 0a3cb9aea15d5aca4ca56767c566472994ea7334 SHA256 e2520eac2f962359edcb4f0331abe7e3df0ea721fdbde60098f259bc1c90db43
-EBUILD xfce4-session-4.6.1.ebuild 954 RMD160 6557be703cafec6c76f2267a86df94bb14b89fb5 SHA1 885fa94cdeee394620833674592f14feb3da538b SHA256 b3afa0e2a7846a6299b1c62c345c3a4a5c016d5d2ff20a0d2baaf4490c2d9c2e
-MISC ChangeLog 11810 RMD160 801cef35e4a628e7ed3bf1b50082d551c0c28596 SHA1 f6f26527e2e7e02ef9afb0d4ea35f4e985be18e9 SHA256 5bc1d0babc1546446250861256806b17462a0db5d35c4579edaaf46dbc503370
-MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
+EBUILD xfce4-session-4.6.1.ebuild 1282 RMD160 c21711f05f7cc59608814020aa6161f273310c25 SHA1 30fe7928c9137f6e8d361914ba792cf93c438763 SHA256 bfa4eff827c6d182734fbc660fd5b5934ac8e50f71550c4b640a55b844e7f43e
+MISC ChangeLog 11960 RMD160 0416156997ea8d48e810e9323a8a26259d42c31a SHA1 d82596c0aee2a8ef8ec41d9f2badc46761343c18 SHA256 118ea494f30b716b5dd5cedfdaac57c7c7bf2eef9f975a5e3caef6eb00024e2d
+MISC metadata.xml 244 RMD160 90c73dd09b35d530e6f4378748de35cde85f10fa SHA1 95958bea917e628d01b3e458d65dab0ce1950613 SHA256 f0402278ccebaff50df5e59436d57de8bc99581ceb131ec48ef1347fa482127f
