@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>xfce</herd>
+	<herd>xfce</herd>
+	<use>
+		<flag name="gnome-keyring">Support for storing your password.</flag>
+	</use>
 </pkgmetadata>
