@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce4-session
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.94 2009/07/27 17:46:53 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.95 2009/08/02 08:18:38 ssuominen Exp $
+
+  02 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
+  xfce4-session-4.6.1.ebuild, metadata.xml:
+  Use xfconf.eclass. Missing USE gnome-keyring.
 
   27 Jul 2009; nixnut <nixnut@gentoo.org> xfce4-session-4.6.1.ebuild:
   ppc stable #265587
